--- a/blog_home.html
+++ b/blog_home.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="blog_list.css">
     <nav id="links">
-        <li><a href="./main.html">Home</a></li>
+        <li><a href="./index.html">Home</a></li>
         <li><a class="active" href="./blog_home.html">Blog Posts</a></li>
         <li><a>Funny files</a></li>
     </nav>
