--- a/blogs/sir_bot.html
+++ b/blogs/sir_bot.html
@@ -3,7 +3,7 @@
 <head>
     <link rel="stylesheet" href="../style.css">
     <nav id="links">
-        <li><a href="../main.html">Home</a></li>
+        <li><a href="../index.html">Home</a></li>
         <li><a href="../blog_home.html">Blog Posts</a></li>
         <li><a>Funny files</a></li>
     </nav>
