--- a/index.html
+++ b/index.html
@@ -18,10 +18,12 @@
         <p> Come look and see all my silly little things :P </p>
         <hr>
         <h2> About me</h2>
-        <img src="images/headshot_small.png" style="display: inline; float: left;; width: 30%;">
-        <p> I'm Jemma, I write code, make bad music, animate, and generally get distracted. 
-            Look out for cool little things I make, they might interest you.
-        </p>
+        <img src="images/headshot_small.png" style="display: inline; float: left;; width: 30%;padding: 5%;">
+        <p style="padding:5%;"> I'm Jemma, I write code, make bad music, animate, and generally get distracted. 
+            Look out for cool little things I make, they might interest you. &NewLine; I generally use 
+            <a href="https://www.rust-lang.org/">Rust</a> for most of my most interesting of projects (maybe you should 
+            read about them on my blog :) )
+         </p>
     </div>
     <footer>
 
