--- a/index.html
+++ b/index.html
@@ -18,12 +18,23 @@
         <p> Come look and see all my silly little things :P </p>
         <hr>
         <h2> About me</h2>
-        <img src="images/headshot_small.png" style="display: inline; float: left;; width: 30%;padding: 5%;">
-        <p style="padding:5%;"> I'm Jemma, I write code, make bad music, animate, and generally get distracted. 
-            Look out for cool little things I make, they might interest you. &NewLine; I generally use 
-            <a href="https://www.rust-lang.org/">Rust</a> for most of my most interesting of projects (maybe you should 
-            read about them on my blog :) )
-         </p>
+
+        <div id="socials">
+            <img src="images/headshot_small.png">
+            <li><a href="https://github.com/woonters" target="_blank">Github</a></li>
+            <li><a href="https://www.youtube.com/@woonters"target="_blank">Youtube</a></li>
+            <li><a href="https://twitter.com/woonters" target="_blank">Twitter</a></li>
+        </div>
+        <div id="Bio">
+            <p style="padding:5%;"> I'm Jemma, I write code, make bad music, animate,
+                and generally get distracted. Look out for cool little things I
+                make, they might interest you. <br> I generally use <a href="https://www.rust-lang.org/">
+                    Rust</a> for most of my most interesting of projects (maybe you
+                should read about them on my blog). On other occasions I use <a href="https://www.python.org/">
+                    Python</a>. <br> But coding isn't my only hobby, I've recently
+                been making music, 3d modeling, animating and writing.
+                <hr </p>
+        </div>
     </div>
     <footer>
 
